--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
         <title>Hello</title>
     </head>
     <body>
-        Hello, world!
+        <h1>Hello, world!</h1>
         
         Screenshot saat proses pemanggilan command "touch" tidak berfungsi
         <img src="touch-command-error.JPG" width="400" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="Command Touch">
