Add Kumpulan Command Git

--- a/hello.html
+++ b/hello.html
@@ -10,5 +10,14 @@
         
         Screenshot saat proses pemanggilan command "touch" tidak berfungsi
         <img src="touch-command-error.JPG" width="400" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="Command Touch">
+
+        <p>
+            Kumpulan command git
+            <ol>
+                <li>git commit -am "Add a heading": untuk melakukan cloning all message</li>
+                <li>git status: untuk mengecek status file saat ini</li>
+                <li>git push: melakukan push/clone dari local computer ke web github</li>
+            </ol>
+        </p>
     </body>
 </html>
