Add new command git

--- a/hello.html
+++ b/hello.html
@@ -17,6 +17,14 @@
                 <li>git commit -am "Add a heading": untuk melakukan cloning all message</li>
                 <li>git status: untuk mengecek status file saat ini</li>
                 <li>git push: melakukan push/clone dari local computer ke web github</li>
+                <li>git reset
+                    <ul>
+                        <li>git reset --hard (commit)</li>
+                        <li>git reset --hard origin/master</li>
+                    </ul>
+                </li>
+                <li>git pull</li>
+                <li>git log</li>
             </ol>
         </p>
     </body>
