--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hello</title>
+        <style>
+            h1 {
+                color: blue;
+            }
+        </style>
     </head>
     <body>
         <h1>Hello, world!</h1>
@@ -25,6 +30,9 @@
                 </li>
                 <li>git pull</li>
                 <li>git log</li>
+                <li>git branch
+                    <ul>git checkout -b style</ul>
+                </li>
             </ol>
         </p>
     </body>
