add new heading style

--- a/hello.html
+++ b/hello.html
@@ -31,7 +31,10 @@
                 <li>git pull</li>
                 <li>git log</li>
                 <li>git branch
-                    <ul>git checkout -b style</ul>
+                    <ul>
+                        <li>git checkout -b style: untuk create new branch bernama style</li>
+                        <li>git checkout master: untuk pindah branch</li>
+                    </ul>
                 </li>
             </ol>
         </p>
