Add command Git Clone

--- a/hello.html
+++ b/hello.html
@@ -22,6 +22,7 @@
                 <li>git commit -am "Add a heading": untuk melakukan cloning all message</li>
                 <li>git status: untuk mengecek status file saat ini</li>
                 <li>git push: melakukan push/clone dari local computer ke web github</li>
+                <li>git clone https://github.com/bartan29/basic-web-programming.git: untuk melakukan clone dari github ke local computer </li>
                 <li>git reset
                     <ul>
                         <li>git reset --hard (commit)</li>
